# MiniSnakeGame

./: CMakeLists.txt  README.md  project_report.docx
include/: controller.h  game.h  renderer.h  roadblock_node.h  snake.h
src/: controller.cpp  game.cpp  main.cpp  renderer.cpp  roadblock_node.cpp  snake.cpp
